<resources>
    <string name="app_name">Digital Cards Directory</string>
    <string name="txt_card_detail">Card Details</string>
    <string name="txt_contact">Contact</string>
    <string name="txt_card">Card</string>
    <string name="txt_notes">Notes</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_email">Email</string>
    <string name="menu_delete_card">Delete Card</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="enter_login_info">Please Enter Login Details</string>
    <string name="enter_all_signup_fields">Fields cannot be blank</string>
    <string name="customer_exists">Customer Record Exists For this Email. Please Login</string>
    <string name="signup_success_msg">You are registered successfully</string>
    <string name="password_match">Passowords Doesn\'t match</string>
    <string name="login_validation">Email Id and Password doesn\'t match. Please verify your credentials</string>
    <string name="no_customer_record">No record with this Email. Please SignUp</string>

    <string name="title_activity_navigtion">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_err_call">No application available to call</string>
    <string name="txt_err_empty_call">Please enter phone number</string>
    <string name="txt_hint_notes">Enter notes</string>
    <string name="txt_update_notes">Update Notes</string>
    <string name="txt_err_notes">Empty notes can not be saved</string>
    <string name="txt_hint_first_name">Enter First Name</string>
    <string name="txt_hint_last_name">Enter Last Name</string>
    <string name="txt_hint_emailId">Enter Email Id</string>
    <string name="txt_password">Password</string>
    <string name="txt_hint_retype_pwd">Re-Type Password</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_hint_email">Email Id</string>
    <string name="txt_login">Login</string>
    <string name="txt_signup_msg">Not a member? Sign Up</string>
    <string name="txt_my_cards">My Cards</string>
    <string name="txt_add_card">Add Card</string>
    <string name="menu_save_card">Save Card</string>
    <string name="txt_click_pic">Click Picture</string>
    <string name="txt_select_photos">Select from Photos</string>
    <string name="txt_denied_camera">Application needs camera permission to click picture</string>
    <string name="txt_denied_photos">Application needs read permission to select photo</string>
    <string name="txt_contact_name">Contact Name</string>
    <string name="txt_org">Organization</string>
    <string name="txt_contact_no">Contact No.</string>
    <string name="txt_notes_opt">Notes (Optional)</string>
    <string name="txt_err_edit_card">Please fill required details.</string>
    <string name="txt_hint_search">Search...</string>
    <string name="txt_loading">Loading</string>
    <string name="menu_refer_card">Refer card</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_delete_msg">Do you really want to delete this card?</string>
    <string name="txt_dialog_title">Refer To:</string>
    <string name="txt_success_refer">Card Referred Successfully.</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_logout_done">You are logged out</string>
    <string name="txt_msg_email">Please Enter EmailId</string>
    <string name="txt_login_progress">Login In Progress</string>
    <string name="txt_signup_progress">Registering User</string>
    <string name="txt_upload_progress">Uploading Card</string>
    <string name="txt_upload_success">Card Uploaded Successfully</string>
    <string name="txt_card_save_success">Card Saved Successfully</string>
    <string name="txt_err_no_img">Please Click or Select Card Image</string>
    <string name="txt_notes_success">Notes Updated Successfully</string>
    <string name="txt_no_cards">No Cards</string>
</resources>
