<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_5"
        android:text="@string/txt_dialog_title"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_22"
        app:fontFamily="@font/app_font" />

    <EditText
        android:id="@+id/edt_toEmailId"
        style="@style/TextDetailTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:hint="@string/txt_hint_email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8">

        <Button
            android:id="@+id/btn_refer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:theme="@style/ButtonTheme" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:theme="@style/ButtonTheme" />
    </LinearLayout>

</LinearLayout>