<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/txt_notes"
        android:textAllCaps="true"
        android:textColor="@color/color_text_initial"
        android:textSize="@dimen/font_20"
        app:fontFamily="@font/app_font" />

    <EditText
        android:id="@+id/edt_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/color_text_initial"
        android:fontFamily="@font/app_font"
        android:hint="@string/txt_hint_notes"
        android:padding="@dimen/padding_8"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_20" />

    <Button
        android:id="@+id/btn_update_notes"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_15"
        android:text="@string/txt_update_notes" />

</LinearLayout>